@@ -648,6 +648,53 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testList
+specifier|public
+name|void
+name|testList
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|zkClient
+operator|.
+name|makePath
+argument_list|(
+literal|"/test"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"-zkhost"
+block|,
+name|zkServer
+operator|.
+name|getZkAddress
+argument_list|()
+block|,
+literal|"-cmd"
+block|,
+literal|"list"
+block|}
+decl_stmt|;
+name|ZkCLI
+operator|.
+name|main
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testUpConfigLinkConfigClearZk
 specifier|public
 name|void
